--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,12 @@ matrix:
     - rust: nightly
       script:
         - cargo test
+    - name: Integration Tests
+      services:
+        - docker
+      before_install:
+        - docker build -f frontend.Dockerfile .
+        - docker build -f backend.Dockerfile .
 
 notifications:
   email:
