--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,10 @@ matrix:
         - docker
       before_install:
         - docker-compose up
+      install: skip
+      before_script: skip
+      script:
+        - curl -H 'Accept: text/html' http://localhost:4200 | fgrep 'crates.io: Rust Package Registry'
 
 notifications:
   email:
